Added data loading step to notebook. Added more notes on the datastructure, and more guidance through the cells

--- a/Implicit_ALS_books.ipynb
+++ b/Implicit_ALS_books.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -68,8 +68,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Data\n",
+    "\n",
+    "\n",
+    "In the cell below, we download and unzip the data. The two files we are interested in are BX-Books.csv and BX-Book-Ratings.csv, which follow these schema: \n",
+    "\n",
+    "### BX-Books.csv\n",
+    "| Field Name |  Type | Description |\n",
+    "|------------|------|\n",
+    "|ISBN |  String | length 10, alphanumeric |\n",
+    "| Book-Title | String | Title of book |\n",
+    "|Book-Author | String| Name of author |\n",
+    "| Year-Of-Publication | String | yyyy|\n",
+    "|Publisher| String |Name of publisher |\n",
+    "|Image-URL-S | String| URL for small image on amazon.com |\n",
+    "|Image-URL-M | String| URL for medium image on amazon.com |\n",
+    "|Image-URL-L | String| URL for large image on amazon.com|\n",
+    "\n",
+    "\n",
+    "### BX-Book-Ratings.csv\n",
+    "| Field Name |  Type | Description |\n",
+    "|------------|------|\n",
+    "|User-ID |  Integer | Range from 2 to 278854 |\n",
+    "| ISBN | String| length 10, alphanumeric |\n",
+    "|Book-Rating| Integer | 1-10 denotes dislike-like. 0 denotes implicit interaction|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2018-04-09 15:29:29--  http://www2.informatik.uni-freiburg.de/~cziegler/BX/BX-CSV-Dump.zip\n",
+      "Resolving www2.informatik.uni-freiburg.de (www2.informatik.uni-freiburg.de)... 132.230.105.133\n",
+      "Connecting to www2.informatik.uni-freiburg.de (www2.informatik.uni-freiburg.de)|132.230.105.133|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 26085508 (25M) [application/zip]\n",
+      "Saving to: ‘BX-CSV-Dump.zip’\n",
+      "\n",
+      "BX-CSV-Dump.zip     100%[===================>]  24.88M  3.17MB/s    in 8.0s    \n",
+      "\n",
+      "2018-04-09 15:29:37 (3.11 MB/s) - ‘BX-CSV-Dump.zip’ saved [26085508/26085508]\n",
+      "\n",
+      "Archive:  BX-CSV-Dump.zip\n",
+      "  inflating: BX-Book-Ratings.csv     \n",
+      "  inflating: BX-Books.csv            \n",
+      "  inflating: BX-Users.csv            \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Downloading and unzipping the data\n",
+    "!wget http://www2.informatik.uni-freiburg.de/~cziegler/BX/BX-CSV-Dump.zip\n",
+    "!unzip BX-CSV-Dump.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell above loads three .csv files into the working directory. We are interested in the files \"BX-Books-Ratings.csv\" and \"BX-Books.csv\". The first three columns of \"BX-Book-Ratings\" are the user id, an isbn number for the book, and a rating. A '0' in the rating column is used to denote that an implicit interaction occured between the user an the book. It is this data that we are interested in, and we extract such rows using the following grep command:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!grep '\"0\"' BX-Book-Ratings.csv > implicit.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,36 +167,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#Need the isbns to be linked to an int for item id\n",
-    "isbns=ratings.map(lambda x:x[1]).distinct()\n",
-    "isbns_with_indices=isbns.zipWithIndex()\n",
-    "reordered_ratings = ratings.map(lambda x:(x[1], (x[0], x[2])))\n",
-    "joined = reordered_ratings.join(isbns_with_indices)\n",
-    "ratings_int_nice = joined.map(lambda x: (x[1][0][0], x[1][1], x[1][0][1]))"
+    "Let's have a look at the first 10 entries in the ratings file: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(276725, '034545104X', 0),\n",
+       " (276727, '0446520802', 0),\n",
+       " (276733, '2080674722', 0),\n",
+       " (276746, '0425115801', 0),\n",
+       " (276746, '0449006522', 0),\n",
+       " (276746, '0553561618', 0),\n",
+       " (276746, '055356451X', 0),\n",
+       " (276746, '0786013990', 0),\n",
+       " (276746, '0786014512', 0),\n",
+       " (276747, '0451192001', 0)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.take(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implicit ALS function we are going to use requires that product ids are integers. At the moment we have ISBN numbers, which contain a mixture of numbers and letters, so we must convert to integers. This can be done using the zipWithIndex() function which takes an RDD and joins unique ids to each entry. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('0425103528', ((41455, 0), 103633)),\n",
+       " ('0425103528', ((95991, 0), 103633)),\n",
+       " ('0425103528', ((102967, 0), 103633)),\n",
+       " ('0425103528', ((186570, 0), 103633)),\n",
+       " ('0756401836', ((93047, 0), 30136)),\n",
+       " ('0756401836', ((110483, 0), 30136)),\n",
+       " ('0756401836', ((170415, 0), 30136)),\n",
+       " ('0756401836', ((176875, 0), 30136)),\n",
+       " ('321630681X', ((245839, 0), 61121)),\n",
+       " ('0439110246', ((114414, 0), 2))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract unique isbns.\n",
+    "isbns=ratings.map(lambda x:x[1]).distinct()\n",
+    "#Associates an integer with each unique isbn.\n",
+    "isbns_with_indices=isbns.zipWithIndex() \n",
+    "#sets isbn as the key\n",
+    "reordered_ratings = ratings.map(lambda x:(x[1], (x[0], x[2]))) \n",
+    "joined = reordered_ratings.join(isbns_with_indices) #joins with indexes \n",
+    "joined.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(41455, 103633, 0),\n",
+       " (95991, 103633, 0),\n",
+       " (102967, 103633, 0),\n",
+       " (186570, 103633, 0),\n",
+       " (93047, 30136, 0),\n",
+       " (110483, 30136, 0),\n",
+       " (170415, 30136, 0),\n",
+       " (176875, 30136, 0),\n",
+       " (245839, 61121, 0),\n",
+       " (114414, 2, 0)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The data above is of the form :\n",
+    "    #(isbn, ((userid, rating), isbn-id-integer))\n",
+    "#We use the map function to get to the form :\n",
+    "    #(user id, isbn-id-integer, rating)\n",
+    "#This is the form expected by the ALS function\n",
+    "ratings_int_nice = joined.map(lambda x: (x[1][0][0], x[1][1], x[1][0][1]))\n",
+    "ratings_int_nice.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Need 1s not 0s. since the matrix is singular if 0s. i.e. 1 indicates response, not 0.\n",
+    "#Need 1s not 0s. since the matrix is singular if 0s. \n",
+    "#i.e. we use '1' to indicate response, not 0.\n",
     "ratings_ones = ratings_int_nice.map(lambda x:(x[0], x[1], 1))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now import the ALS function from the mllib module, and build the model. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -126,44 +313,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[83211,\n",
-       " 35018,\n",
-       " 149718,\n",
-       " 201265,\n",
-       " 170534,\n",
-       " 168010,\n",
-       " 176140,\n",
-       " 139616,\n",
-       " 219591,\n",
-       " 222162,\n",
-       " 244957]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Pretend to be user 8. \n",
-    "users_books = ratings_ones.filter(lambda x: x[0] is 8).map(lambda x:x[1])\n",
-    "\n",
-    "users_books.take(10)\n",
-    "books_for_them = users_books.collect()\n",
-    "iterable_chain = users_books.toLocalIterator()\n",
-    "books_for_them"
+    "Let's have a look at user 8. We wish to make predictions on what books the user will like, based on their interactions. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filter out all the  id of all books rated by user id = 8. \n",
+    "users_books = ratings_ones.filter(lambda x: x[0] is 8).map(lambda x:x[1])\n",
+    "books_for_them = users_books.collect() #Collect this as a list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this next cell, we make a rdd of (user = 8, book ids) where there is an entry for every book they have not before interacted with. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,49 +357,58 @@
        " (8, 9)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unseen = isbns_with_indices.map(lambda x:x[1]).filter(lambda x: x not in books_for_them).map(lambda x: (8, int(x)))\n",
-    "unseen"
+    "unseen = isbns_with_indices.map(lambda x:x[1]) \\\n",
+    "                            .filter(lambda x: x not in books_for_them) \\\n",
+    "                            .map(lambda x: (8, int(x)))\n",
+    "unseen.take(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#Using the predict all function to give predictions for any unseens. \n",
-    "predictions = model.predictAll(unseen)\n"
+    "predictions = model.predictAll(unseen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now look at predictions for a range of user, product pairs:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Rating(user=8, product=185544, rating=4.2271030054993974e-06),\n",
-       " Rating(user=8, product=152288, rating=2.0750792412236027e-05),\n",
-       " Rating(user=8, product=143464, rating=1.0009329102651996e-05),\n",
-       " Rating(user=8, product=23776, rating=4.4093986779524005e-05),\n",
-       " Rating(user=8, product=155312, rating=7.568740395670591e-06),\n",
-       " Rating(user=8, product=82512, rating=-2.370503477555326e-06),\n",
-       " Rating(user=8, product=170792, rating=-1.5023831712554203e-08),\n",
-       " Rating(user=8, product=103184, rating=-1.21955109500547e-08),\n",
-       " Rating(user=8, product=40888, rating=-8.983168069646947e-06),\n",
-       " Rating(user=8, product=200376, rating=1.584185955094937e-05)]"
+       "[Rating(user=8, product=185544, rating=3.5499178936374144e-06),\n",
+       " Rating(user=8, product=152288, rating=1.1140932904340358e-05),\n",
+       " Rating(user=8, product=143464, rating=1.2945490545668097e-05),\n",
+       " Rating(user=8, product=23776, rating=3.676099823410155e-05),\n",
+       " Rating(user=8, product=155312, rating=1.923518143573988e-05),\n",
+       " Rating(user=8, product=82512, rating=-2.2283889456646724e-06),\n",
+       " Rating(user=8, product=170792, rating=-9.112801659288064e-09),\n",
+       " Rating(user=8, product=103184, rating=4.111202468665078e-09),\n",
+       " Rating(user=8, product=40888, rating=2.4160142131097027e-06),\n",
+       " Rating(user=8, product=200376, rating=1.281169533897479e-05)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,36 +418,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use .takeOrdered to view the 20 highest rated items for that user. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Rating(user=8, product=218987, rating=0.005679459189748123),\n",
-       " Rating(user=8, product=37124, rating=0.0056743738510453045),\n",
-       " Rating(user=8, product=222388, rating=0.003184519694282364),\n",
-       " Rating(user=8, product=61040, rating=0.002636430903826744),\n",
-       " Rating(user=8, product=278, rating=0.0023415537266199974),\n",
-       " Rating(user=8, product=224398, rating=0.0023259600211237154),\n",
-       " Rating(user=8, product=232462, rating=0.002162405558826569),\n",
-       " Rating(user=8, product=170112, rating=0.002145339089236659),\n",
-       " Rating(user=8, product=215022, rating=0.0021304683630739008),\n",
-       " Rating(user=8, product=127891, rating=0.002008426523603443),\n",
-       " Rating(user=8, product=74810, rating=0.001978164272045892),\n",
-       " Rating(user=8, product=111968, rating=0.0019664236210441216),\n",
-       " Rating(user=8, product=226501, rating=0.0019470256951683467),\n",
-       " Rating(user=8, product=155093, rating=0.0017297421250543385),\n",
-       " Rating(user=8, product=134108, rating=0.0016752060544477018),\n",
-       " Rating(user=8, product=158268, rating=0.0016475328355897317),\n",
-       " Rating(user=8, product=181869, rating=0.001506617157074433),\n",
-       " Rating(user=8, product=223924, rating=0.0015025012477668637),\n",
-       " Rating(user=8, product=104641, rating=0.0014719921538684858),\n",
-       " Rating(user=8, product=112511, rating=0.0013891314387473564)]"
+       "[Rating(user=8, product=218987, rating=0.006400773040138297),\n",
+       " Rating(user=8, product=37124, rating=0.004201500598023086),\n",
+       " Rating(user=8, product=226501, rating=0.003013403659823166),\n",
+       " Rating(user=8, product=222388, rating=0.0019098079964174936),\n",
+       " Rating(user=8, product=224398, rating=0.001893200744164136),\n",
+       " Rating(user=8, product=135249, rating=0.0018104361395196718),\n",
+       " Rating(user=8, product=158268, rating=0.0017122310913895078),\n",
+       " Rating(user=8, product=115200, rating=0.0015320753848580505),\n",
+       " Rating(user=8, product=126542, rating=0.0015233736116273327),\n",
+       " Rating(user=8, product=153367, rating=0.001396647908855291),\n",
+       " Rating(user=8, product=104641, rating=0.0013685284571707751),\n",
+       " Rating(user=8, product=56184, rating=0.0012524267983160201),\n",
+       " Rating(user=8, product=61040, rating=0.0012331378504750984),\n",
+       " Rating(user=8, product=215022, rating=0.0011415533435755764),\n",
+       " Rating(user=8, product=170112, rating=0.0011322398700266108),\n",
+       " Rating(user=8, product=194437, rating=0.0011117130375315337),\n",
+       " Rating(user=8, product=156460, rating=0.0010892750649857627),\n",
+       " Rating(user=8, product=134108, rating=0.0010762374172979586),\n",
+       " Rating(user=8, product=223924, rating=0.001054600042183259),\n",
+       " Rating(user=8, product=64700, rating=0.0010088824359691375)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,26 +464,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The .recommendProducts function allows us to view predicted ratings for specific user, item pairs. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Rating(user=8, product=218987, rating=0.005679459189748123),\n",
-       " Rating(user=8, product=37124, rating=0.0056743738510453045),\n",
-       " Rating(user=8, product=222388, rating=0.003184519694282364),\n",
-       " Rating(user=8, product=61040, rating=0.002636430903826744),\n",
-       " Rating(user=8, product=278, rating=0.0023415537266199974),\n",
-       " Rating(user=8, product=224398, rating=0.0023259600211237154),\n",
-       " Rating(user=8, product=232462, rating=0.002162405558826569),\n",
-       " Rating(user=8, product=170112, rating=0.002145339089236659),\n",
-       " Rating(user=8, product=215022, rating=0.0021304683630739008),\n",
-       " Rating(user=8, product=127891, rating=0.002008426523603443)]"
+       "[Rating(user=8, product=218987, rating=0.006400773040138297),\n",
+       " Rating(user=8, product=37124, rating=0.004201500598023086),\n",
+       " Rating(user=8, product=226501, rating=0.003013403659823166),\n",
+       " Rating(user=8, product=222388, rating=0.0019098079964174936),\n",
+       " Rating(user=8, product=224398, rating=0.001893200744164136),\n",
+       " Rating(user=8, product=135249, rating=0.0018104361395196718),\n",
+       " Rating(user=8, product=158268, rating=0.0017122310913895078),\n",
+       " Rating(user=8, product=115200, rating=0.0015320753848580505),\n",
+       " Rating(user=8, product=126542, rating=0.0015233736116273327),\n",
+       " Rating(user=8, product=153367, rating=0.001396647908855291)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,15 +500,6 @@
    "source": [
     "model.recommendProducts(8,10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
