Fixed I/we confusion and ISBNumber number

--- a/Implicit_ALS_books.ipynb
+++ b/Implicit_ALS_books.ipynb
@@ -48,7 +48,7 @@
     "### Let's get going\n",
     "We are going to run implicit ALS using the implementation given in the pyspark.mllib.recommendation module. \n",
     "\n",
-    "The data I'm using can be found at http://www2.informatik.uni-freiburg.de/~cziegler/BX/"
+    "The data we will be using can be found at http://www2.informatik.uni-freiburg.de/~cziegler/BX/"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cell above loads three .csv files into the working directory. We are interested in the files \"BX-Books-Ratings.csv\" and \"BX-Books.csv\". The first three columns of \"BX-Book-Ratings\" are the user id, an isbn number for the book, and a rating. A '0' in the rating column is used to denote that an implicit interaction occured between the user an the book. It is this data that we are interested in, and we extract such rows using the following grep command:"
+    "The cell above loads three .csv files into the working directory. We are interested in the files \"BX-Books-Ratings.csv\" and \"BX-Books.csv\". The first three columns of \"BX-Book-Ratings\" are the user id, an isbn which identifies the book, and a rating. A '0' in the rating column is used to denote that an implicit interaction occured between the user an the book. It is this data that we are interested in, and we extract such rows using the following grep command:"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The implicit ALS function we are going to use requires that product ids are integers. At the moment we have ISBN numbers, which contain a mixture of numbers and letters, so we must convert to integers. This can be done using the zipWithIndex() function which takes an RDD and joins unique ids to each entry. "
+    "The implicit ALS function we are going to use requires that product ids are integers. At the moment we have unique ISBNs, which contain a mixture of numbers and letters, so we must convert to integers. This can be done using the zipWithIndex() function which takes an RDD and joins unique ids to each entry. "
    ]
   },
   {
@@ -322,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Filter out all the  id of all books rated by user id = 8. \n",
