--- a/Implicit_ALS_books.ipynb
+++ b/Implicit_ALS_books.ipynb
@@ -502,6 +502,14 @@
    "source": [
     "model.recommendProducts(8,10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion \n",
+    "In this notebook we saw how to build a basic implicit ALS model in Spark. However, the data used was fairly plain, with \"0\"s being used for all implicit interactions. Furtherwork should consider a dataset more suited to implicit ALS. "
+   ]
   }
  ],
  "metadata": {
